# netsim

./: CMakeLists.txt  COPYING  build.sh
.circleci/: config.yml
.github/workflows/: copilot-setup-steps.yml
cmake_modules/: FindIvP.cmake  FindLAMSS.cmake  FindProtobufLocal.cmake  GobyClangTool.cmake  GobyTarget.cmake
configs/audioserver/: asound.conf
configs/audioserver/systemd/: enable.txt  goby_logger.service  gobyd.service  jackd.service  jackd_card2.service  modemsim.service  modemsim_socat@.service  netsim_core.service  netsim_core_card2.service  netsim_liaison.service  netsim_manager.service  netsim_moos-arctic.service  netsim_moos-atlantic.service  netsim_moos.service  netsim_moos_gateway-arctic.service  netsim_moos_gateway-atlantic.service  netsim_moos_gateway.service  netsim_postprocess.service  netsim_socat@.service
configs/audioserver/udev/: 95-static-soundcard-name.rules
missions/: fix_fast_track_levels.sh  goby_moos_gateway-arctic.pb.cfg  goby_moos_gateway-atlantic.pb.cfg  launch-modemsim.sh  modemsim-test.pb.cfg  netsim-core-echo.pb.cfg  netsim-core.pb.cfg  netsim-liaison.pb.cfg  netsim_core_deployment.yml  netsim_manager-test.pb.cfg  netsim_manager.pb.cfg  netsim_postprocess.pb.cfg  netsim_tool_ucomms.pb.cfg  netsim_tool_ucomms_100m.pb.cfg  netsim_tool_wip.pb.cfg  netsim_udp_deployment.yml
scripts/: convert_eps.sh  fix_fast_track_levels.sh  restart.sh  status.sh  update_copyright.sh  update_firewall.sh
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/iBellhop/: CMakeLists.txt  acomms_depth_vis.moos  acomms_display.m  acomms_display.moos  acomms_func_vis.m  example.pb.cfg  example.xml  iBellhop.cpp  iBellhop.h  iBellhop.moos  iBellhopMain.cpp  parse_ire.m
src/apps/modemsim/: CMakeLists.txt  common.h  config.proto  detector.h  groups.cpp  groups.h  jack_thread.cpp  jack_thread.h  logger.h  modemsim_main.cpp  processor.h
src/apps/netsim_core/: CMakeLists.txt  bridge.h  common.h  config.proto  detector.h  jack_thread.cpp  jack_thread.h  logger.h  netsim_core_main.cpp  processor.h
src/apps/netsim_manager/: CMakeLists.txt  config.proto  manager.cpp
src/apps/netsim_postprocess/: CMakeLists.txt  audio_images.h  config.proto  netsim_postprocess_main.cpp  tl_plot.h
src/apps/netsim_tool/: CMakeLists.txt  config.proto  main.cpp
src/apps/netsim_udp/: CMakeLists.txt  config.proto  main.cpp
src/doc/doxygen/: CMakeLists.txt  netsim.doxy.in
src/doc/figures/: netsim-core-threads2.dot
src/doc/markdown/: page01_main.md  page05_building.md  page06_configuration.md  page10_architecture.md  page11_netsim_core.md  page12_netsim_manager.md  page15_vehicle_sim_connections.md  page20_liaison.md
src/lib/: CMakeLists.txt
src/lib/acousticstoolbox/: CMakeLists.txt  environment.cpp  environment.h  environment.proto  iBellhop_messages.proto  lamss_environment_update.proto  svp_request_response.proto
src/lib/acousticstoolbox/cmake_modules/: FindGoby.cmake  FindProtobufLocal.cmake
src/lib/acousticstoolbox/examples/: porto_lotti_arrival_times.pb.cfg  porto_lotti_rays.pb.cfg
src/lib/acousticstoolbox/protobuf2bellhop_env/: CMakeLists.txt  protobuf2bellhop_env.cpp
src/lib/core/: boost_serialization.h  common.h  processor.h
src/lib/liaison/: CMakeLists.txt  liaison_load.cpp  liaison_load.h  liaison_netsim.cpp  liaison_netsim.h
src/lib/logger/: CMakeLists.txt  plugin.cpp
src/lib/messages/: CMakeLists.txt  config_request.proto  core_config.proto  env_bellhop_req.proto  groups.h  liaison.proto  logger.proto  manager_config.proto  netsim.proto  tool.proto
src/lib/moos_translator_plugin/: CMakeLists.txt  moos_plugin.cpp  netsim_goby_moos_gateway.in  netsim_goby_moos_gateway.install
src/lib/tcp/: CMakeLists.txt  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h  tcp_session.cpp  tcp_session.h
src/messages/: CMakeLists.txt  config_request.proto  env_bellhop_req.proto  groups.h  liaison.proto  logger.proto  manager_config.proto  tool.proto
src/octave/: convolve_plot_output.m  generate_CW.m  generate_LFM.m  generate_replica.m  liaison_create_shd.m  liaison_plot_signal.m  modemsim_plot.m
src/share/doc/: header_bin.txt  header_lib.txt
src/test/: CMakeLists.txt
src/test/cconvolve_test/: CMakeLists.txt  test-continuous.cpp  test.cpp
src/test/impulse_rpc_test/: CMakeLists.txt  config.proto  test.cpp
src/test/processor_echo/: CMakeLists.txt  processor.cpp  processor.h  processor_config.proto
